--- a/templates/commits.html
+++ b/templates/commits.html
@@ -24,7 +24,7 @@
 <body>
 
 <div class="container">
-    <h1>Nombre de commits par minute</h1>
+    <h1>Nombre de commits par minute du BOSS (wensky)</h1>
     <div id="chart_div" style="width: 100%; height: 500px;"></div>
 </div>
 
