--- a/templates/commits.html
+++ b/templates/commits.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
+            background-color: ##FF0000;
             margin: 0;
             padding: 0;
         }
